# ATRP_KMC_SAA

./: .gitignore  CMakeLists.txt  README.md
include/: ode.h
output/output_data/PDI/: comparison_MWD_con.py  comparison_MWD_con_50.py
output/output_data/PDI/1e5/2/: all_chain.out  all_chain_conv_10.out  all_chain_conv_15.out  all_chain_conv_20.out  all_chain_conv_25.out  all_chain_conv_30.out  all_chain_conv_35.out  all_chain_conv_40.out  all_chain_conv_45.out  all_chain_conv_50.out  conversion.out  molecularweight.out  scaling_factor.out  spe_con.out  species.out
output/output_data/PDI/1e5/20/: all_chain.out  all_chain_conv_10.out  all_chain_conv_15.out  all_chain_conv_20.out  all_chain_conv_25.out  all_chain_conv_30.out  all_chain_conv_35.out  all_chain_conv_40.out  all_chain_conv_45.out  all_chain_conv_50.out  conversion.out  kmc_add_times.txt  molecularweight.out  scaling_factor.out  spe_con.out  species.out
output/output_data/PDI/1e5/4/: all_chain.out  (+23 more)
output/output_data/chainlength/1e5/: all_chain.out  chain_length_10.out  chain_length_100.out  chain_length_20.out  chain_length_30.out  chain_length_40.out  chain_length_50.out  chain_length_60.out  chain_length_80.out  conversion.out  molecularweight.out  scaling_factor.out  spe_con.out  species.out
output/output_data/chainlength/1e7/: all_chain.out  chain_length_10.out  chain_length_100.out  chain_length_20.out  chain_length_30.out  chain_length_40.out  chain_length_50.out  chain_length_60.out  chain_length_80.out  conversion.out  molecularweight.out  spe_con.out  species.out
src/: eff_propa_reorder.cpp
(+210 files in other folders)
